# yandex_geocoder

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: examples.ipynb
src/yandex_geocoder/: __init__.py  _constants.py  _errors.py  client.py  enums.py  exceptions.py
src/yandex_geocoder/models/: params.py  response.py
