[project]
name = "yandex-geocoder"
version = "0.1.0"
description = "Async Python client for Yandex Geocoder API"
readme = "README.md"

requires-python = ">=3.12"

keywords = [
    "yandex",
    "geocoder",
    "api-client",
    "async",
]

dependencies = [
    "httpx2>=2.5.0",
    "pydantic>=2.13.4",
    "pydantic-extra-types>=2.11.1",
    "pydantic-settings>=2.14.2",
]

[build-system]
requires = ["uv_build>=0.10.10,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "pytest>=9.1.1",
]

[tool.mypy]
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
]

ignore = [
    "E501",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
